<resources>
    <string name="app_name">Bhukkad</string>
    <string name="logo">logo</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="slogan">To ease and smoothed the ordering process, Our Android app can be used to order the meal prior from your convenience location which can be then taken away when ready.</string>
    <string name="my_cart">My Cart</string>
    <string name="remember_me">Remember Me</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_id_example">example@example.com</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="proudly_made">Proudly Made In LNMIIT</string>
    <string name="bazzinga">Bazzinga</string>
    <string name="the_food_barn">The Food Barn</string>
    <string name="amul_parlour">Amul Parlour</string>
    <string name="vinayak_caters">Vinayak Caters</string>
    <string name="baba_juice">Baba Juice</string>
    <string name="stationary">Stationary</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="pay_with_paytm">Pay With PayTm</string>
    <string name="canteen_name">Canteen Name</string>
    <string name="price_x_rs">Price : (x rs)</string>
    <string name="name_of_the_item">Name of the Item</string>
    <string name="remove">Remove</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="plus">+</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="total">Total:</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="categories">Categories</string>
    <string name="rfid_number">Unique UserName</string>
    <string name="password">Password</string>
    <string name="send_mail">Send</string>
    <string name="write_your_message">Write your message</string>
    <string name="subject_of_mail">Subject of Mail</string>
    <string name="_0_rs">0 Rs</string>
    <string name="food_barn">Food Barn</string>
    <string name="baba_juice_corner">Baba Juice Corner</string>
    <string name="amul_palour">Amul Palour</string>
</resources>
