<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/user_related"
        android:title="@string/app_name">
        <menu android:checkableBehavior="single">
            <item
                android:id="@+id/nav_cart"
                android:icon="@drawable/ic_cart"
                android:title="@string/my_cart" />
            <item
                android:id="@+id/nav_orders"
                android:icon="@drawable/ic_orders"
                android:title="@string/my_orders" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </menu>
    </item>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/send" />
            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_contact_us"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>