<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/generalbg"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/generalbgg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/iconpurp" />

            <View
                android:layout_width="14dp"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"

                android:orientation="vertical"
                android:paddingTop="9dp">

                <TextView
                    android:id="@+id/nameCartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_of_the_item"
                    android:textAlignment="textStart"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/priceCartText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:paddingTop="5dp"
                    android:text="@string/price_x_rs"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/canteenNameCart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:text="@string/canteen_name"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="2dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <Button
                android:id="@+id/increment"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/plus"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/decrement"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/minus"
                android:textColor="#fff" />

            <Button
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/remove"
                android:textColor="#fff"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
