<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedbackActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/subject_of_mail"
        android:inputType="textPersonName" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <EditText
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:hint="@string/write_your_message"
        android:inputType="textMultiLine" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:text="@string/send_mail"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

</LinearLayout>