<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:padding="16dp"
            android:src="@drawable/bhukhad_logo" />

        <TextView
            android:id="@+id/oneLiner"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/slogan"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:shadowColor="@android:color/black"
            android:text="@string/sign_up"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:shadowColor="@android:color/black"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />
    </LinearLayout>

</RelativeLayout>